# dci-research-agent-system

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DCI_RESEARCH_AGENT_AUTONOMOUS_BUILD_V2.md  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routes/: __init__.py  conversations.py  documents.py  health.py  indexes.py  query.py
app/: main.py
app/components/: chat.py  sidebar.py  sources.py
app/styles/: custom.css
config/: __init__.py  constants.py  settings.py
deploy/: Dockerfile  akash-deploy.sdl.yml  docker-compose.yml
docs/: AKASH_DEPLOYMENT.md  FINE_TUNING_PLAN.md  QUICKSTART.md
scripts/: benchmark.py  download_documents.py  generate_indexes.py  ingest_documents.py  run_autonomous.py  run_pipeline.py  test_retrieval.py
src/: orchestrator.py
src/agents/: __init__.py  base_agent.py  code_agent.py  critique_agent.py  domain_agent.py  domain_agents.py  math_agent.py  orchestrator.py  router.py  synthesis_agent.py  synthesizer.py
src/document_processing/: __init__.py  chunker.py  downloader.py  embedder.py  extractor.py  indexer.py  pipeline.py  validator.py
src/knowledge_graph/: __init__.py  (+6 more)
tests/: conftest.py  test_agents.py  test_api.py  test_community_detector.py  test_config.py  test_conversation.py  test_document_processing.py  test_e2e_api.py  test_e2e_system.py  test_entity_resolver.py  test_graph_writer.py  test_knowledge_graph.py  test_persistence.py  test_queries.py  test_retrieval.py
(+35 files in other folders)
